Fix styling on mobile

--- a/sites/all/themes/humanitarianresponse/assets/sass/screen.scss
+++ b/sites/all/themes/humanitarianresponse/assets/sass/screen.scss
@@ -79,14 +79,14 @@
   top: 0;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 769px) {
   .container.header .region-branding {
     position: absolute;
     top: 0;
   }
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
   .container {
     width: auto;
   }
